# kindle-series-manager

./: .gitattributes  .gitignore  .gitmodules  Dockerfile.test  README.md  kindle_series.py  pyproject.toml  run_tests.sh
.github/workflows/: release.yml  test.yml
gtk-app/: .gitignore  README.md  meson.build
gtk-app/src/: main.cpp
kual-extension/: menu.json
kual-extension/kindle-series-manager/: menu.json
kual-extension/kindle-series-manager/goodreads/: gr_build_mapping.sh  gr_login.sh  gr_search.sh  gr_sync.sh  gr_update.sh
kual-extension/kindle-series-manager/hardcover/: hc_build_mapping.sh  hc_config.json  hc_search.sh  hc_sync.sh  hc_update.sh
kual-extension/kindle-series-manager/upstart/: gr-sync.conf  hc-sync.conf  ksm-stats.conf
kual-extension/kindle-series-manager/www/: collections.js  index.html  opds.js.txt  png-codec.js
kual-extension/kindle-series-manager/www/cgi-bin/: book_thumb.cgi  books.cgi  books_browse.cgi  calibre_config.cgi  calibre_download.cgi  calibre_proxy.cgi  calibre_scan.cgi  calibre_thumb.cgi  collection_books.cgi  collection_create.cgi  collection_remove.cgi  collections.cgi  create.cgi  font_delete.cgi  font_disable.cgi  font_enable.cgi  font_page.cgi  font_upload.cgi  gr_dologin.cgi  gr_domapping.cgi  gr_logout.cgi  gr_savecreds.cgi  grpage.cgi  (+28 more)
kual-extension/www/: index.html
kual-extension/www/cgi-bin/: create.cgi  pending.cgi  remove.cgi  series.cgi
tests/: cc.db  conftest.py  test_html_js.py  test_kindle_series.py
tests/cgi/: run_cgi_tests.sh
tools/ss_shield/: Dockerfile.build  README.md  build.sh  ss_shield.c
(+5 files in other folders)
